@@ -16,6 +16,7 @@ dpkg (1.17.19) UNRELEASED; urgency=low
   * Fix trigger dependency checks and cycle detection.
     Regression introduced in dpkg 1.17.17.
     Closes: #765434, #765668, #765734, #765781, #765789, #765952
+  * Rework dependency problem debug and notice output on trigger processing.
 
   [ Updated programs translations ]
   * Italian (Milo Casagrande): Closes: #765748
